# pyCapsid

./: CITTATION.cff  CONTRIBUTING.md  DS_Store  LICENSE  README.md  meta.yaml  pyproject.toml  setup.py
.github/scripts/: conda_build_script.sh
.github/workflows/: conda-custom.yml  python-package-conda.yml
conda/: README.md  meta.yaml
data/: DS_Store   README.md
data/1_references/: DS_Store  README.md  list_potential.md
docs/: Gemfile  _config.yml  index.md
docs/_includes/: footer_custom.html  head_custom.html
docs/acknowledgements/: index.md
docs/api_reference/: index.md
docs/approach/: index.md
docs/background/: index.md
docs/examples/: index.md
docs/gallery/: index.md
docs/gallery/1za7_pyCapsid_report/: pyCapsid_key_results.csv  pyCapsid_report.html  pyCapsid_report.md
docs/gallery/2ft1_pyCapsid_report/: pyCapsid_key_results.csv  pyCapsid_report.md
docs/gallery/2g33_pyCapsid_report/: pyCapsid_key_results.csv  pyCapsid_report.html  pyCapsid_report.md
docs/gallery/2ms2_pyCapsid_report/: pyCapsid_key_results.csv  pyCapsid_report.html  pyCapsid_report.md
docs/gallery/2xyy_pyCapsid_report/: pyCapsid_key_results.csv  pyCapsid_report.md
docs/gallery/3cji_pyCapsid_report/: pyCapsid_key_results.csv  pyCapsid_report.html  pyCapsid_report.md
docs/gallery/3nap_pyCapsid_report/: pyCapsid_key_results.csv  (+2 more)
docs/impact/: index.md
docs/installation/: index.md  pycapsid_HPC_installation.md  pycapsid_environment.yml
docs/output/: index.md
docs/synthesis/: index.md
docs/tutorial/: conf_example.toml  config_simple.toml  example_tutorial.md  index.md
notebooks/: example_notebook.ipynb  prody_benchmark_script.py  pyCapsid_colab_config_tutorial.ipynb  pyCapsid_colab_notebook.ipynb  pyCapsid_colab_notebook_py3dmol_testing.ipynb  pyCapsid_colab_tutorial.ipynb  pyCapsid_config_example.ipynb
notebooks/pyCapsid_report_example/: pyCapsid_report.md
results/: README.md  pyCapsid_hk97_data_cbrown_thesis.csv
results/disassembly/: readme.md
results/performance/: README.md  pyCapsid_performance_analysis.html  pyCapsid_performance_analysis.ipynb  pyCapsid_performance_data.csv  pyCapsid_performance_data_description.md  pycap_performance_results_comparison.csv  pycap_prody_CC_comparison_results.csv
src/: README.md
src/pyCapsid/: CG.py  ENM.py  NMA.py  PDB.py  QRC.py  VIS.py  __init__.py  bfactorfit.py  clustering_util.py  mechanical_analysis.py  pdbutil.py  quasi_rigid_clustering.py  viz_util.py
(+55 files in other folders)
